--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-473.3KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-1.73MB/s(Youtube:不良林), server: 111.45.22.136, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-5.18MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-244.1KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-5.10MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-1001.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-2.77MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇨🇳 中国-17.43MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-345.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-338.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-13.66MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
