--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-2.77MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇨🇳 中国-356.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇯🇵 日本-7.54MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-292.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-17.43MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-345.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
