--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-356.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇯🇵 日本-7.54MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-292.3KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-4.49MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-803.9KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-224.2KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-971.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-17.43MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-345.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇯🇵 日本-338.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-13.66MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-356.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-292.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
