--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.49MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65068, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-803.9KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-224.2KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-971.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.63MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.64MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇨🇳 中国-8.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.06MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-17.43MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-345.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇯🇵 日本-338.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-13.66MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-15.63MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-803.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-224.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-971.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
